--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.10",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.1.10",
     "vue": "^3.5.13",
