--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/vite": "^4.1.10",
     "pinia": "^3.0.1",
-    "tailwindcss": "^4.1.10",
+    "postcss": "^8.5.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -25,6 +26,7 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
     "npm-run-all2": "^7.0.2",
+    "tailwindcss": "^4.1.10",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
