--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/vite": "^4.1.10",
     "pinia": "^3.0.1",
-    "postcss": "^8.5.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -25,7 +24,9 @@
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
     "npm-run-all2": "^7.0.2",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.10",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
